Corrected css on Contact page for IE. Updated bio page for readability and flow.

--- a/static/main.css
+++ b/static/main.css
@@ -188,6 +188,7 @@ form textarea {
 	font: 13px/22px Helvetica, Arial, sans-serif;
 	padding: 2px;
 	width: 200px;	
+	margin-bottom: 10px;
 }
 
 .error {
